2012-02-07  Jonathan Backer  <backer@chromium.org>

        [chromium] Add setNeedsRedraw to WebWidget
        https://bugs.webkit.org/show_bug.cgi?id=77555

        Reviewed by James Robinson.

        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
        (WebCore::CCLayerTreeHost::setNeedsRedraw):
        * platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
        (WebCore::CCSingleThreadProxy::setNeedsRedraw):
        * platform/graphics/chromium/cc/CCThreadProxy.cpp:
        (WebCore::CCThreadProxy::setNeedsRedraw):
        (WebCore::CCThreadProxy::resetDamageTrackerOnImplThread):
        (WebCore):
        * platform/graphics/chromium/cc/CCThreadProxy.h:
        (CCThreadProxy):

2012-02-07  Michael Brüning  <michael.bruning@nokia.com>

        [Qt][WK2] Compute and set cache capacities using the current CacheModel
        https://bugs.webkit.org/show_bug.cgi?id=73918

        Reviewed by Kenneth Rohde Christiansen.

        No new tests. (build fix)

        * platform/qt/FileSystemQt.cpp:
        (WebCore::getVolumeFreeSizeForPath):

2012-02-07  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: add generic support for undo-ing DOM edits.
        https://bugs.webkit.org/show_bug.cgi?id=77875

        Reviewed by Yury Semikhatsky.

        This change introduces InspectorHistory::Action that encapsulates all DOM modifications
        initiated by the inspector. There is a way to undo these actions up until the undoable
        state marker.

        Tests: inspector/elements/undo-dom-edits-2.html
               inspector/elements/undo-dom-edits.html
               inspector/styles/undo-add-property.html
               inspector/styles/undo-change-property.html
               inspector/styles/undo-property-toggle.html

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj: